public class ServerController {


    public void run() {
        MainServer server = new MainServer();
        server.run();
    }
}
