package communication;

public class CommunicationReceiving implements Runnable {
    @Override
    public void run() {

    }
}
