package communication;

public class CommunicationSending implements Runnable {
    @Override
    public void run() {
        
    }
}
