@startuml

title __SERVER's Class Diagram__\n

  namespace  {
    class MainServer {
    }
  }
  

  namespace  {
    class Server {
    }
  }
  

  namespace  {
    class ServerController {
    }
  }
  

  namespace  {
    namespace uthentication {
      class authentication.ServerAuthenticator {
      }
    }
  }
  

  namespace  {
    namespace ommunication {
      class communication.CommicationController {
      }
    }
  }
  

  namespace  {
    namespace ommunication {
      class communication.CommunicationReceiving {
      }
    }
  }
  

  namespace  {
    namespace ommunication {
      class communication.CommunicationSending {
      }
    }
  }
  

  namespace  {
    namespace actors {
      class factors.CookieFactor {
      }
    }
  }
  

  namespace  {
    namespace actors {
      interface factors.Factor {
      }
    }
  }
  

  namespace  {
    namespace actors {
      class factors.PasswordFactor {
      }
    }
  }
  

  namespace  {
    namespace essage {
      class message.Message {
      }
    }
  }
  

  MainServer o-- authentication.ServerAuthenticator : authenticator
  communication.CommicationController .up.|> java.lang.Runnable
  communication.CommicationController o-- authentication.ServerAuthenticator : authenticator
  communication.CommicationController o-- message.Message : clientMessage
  communication.CommunicationReceiving .up.|> java.lang.Runnable
  communication.CommunicationSending .up.|> java.lang.Runnable
  factors.CookieFactor .up.|> factors.Factor
  factors.PasswordFactor .up.|> factors.Factor
  message.Message .up.|> java.io.Serializable
  message.Message o-- message.Message.CODE : code


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
